--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -566,7 +566,7 @@
   <string name="Start_Hotspot_Prompt">開啟前請確定手機已連接到“%s”WiFi網絡</string>
   <string name="Start_Success">開啟成功</string>
   <string name="Start_instructions">開啟說明</string>
-  <string name="Start_instructions_A">在微信公眾號裡綁定加菲狗手機/郵箱，即可開啟此功能。</string>
+  <string name="Start_instructions_A">在微信公眾號裡綁定加菲狗電子郵件，即可開啟此功能。</string>
   <string name="Start_instructions_B">步驟如下：</string>
   <string name="Start_instructions_C">1. 請先關注微信公眾號“加菲狗官微服務”</string>
   <string name="Start_instructions_D">方法一：點擊微信右上角的“+”號 > 添加朋友 > 公眾號，搜索“加菲狗官微服務”然後關注。</string>
@@ -574,7 +574,7 @@
   <string name="Start_instructions_F">2. 綁定賬號</string>
   <string name="Start_instructions_G">關注“加菲狗官微服務”公眾號後，進入主頁面，點擊菜單欄的“服務”，選擇“綁定賬號”。</string>
   <string name="Start_instructions_H">綁定賬號</string>
-  <string name="Start_instructions_I">請輸入加菲狗手機/郵箱賬號進行綁定，如忘記密碼請到加菲狗客戶端找回</string>
+  <string name="Start_instructions_I">請輸入加菲狗電子郵件賬號進行綁定，如忘記密碼請到加菲狗客戶端找回</string>
   <string name="Switch_Mode">拍攝內容請切換至直連模式查看</string>
   <string name="Switch_Mode_Pop">當前網絡拍攝內容請切換至直連模式查看</string>
   <string name="TAKE_PHOTO">拍照</string>
@@ -913,6 +913,7 @@
   <string name="USE_HELP">操作助理</string>
   <string name="Unconnect_Network">您的設備未連接移動網絡，或Wi&#8211;Fi網絡</string>
   <string name="VALID_STORAGE">儲存空間</string>
+  <string name="VIDEO_FirmwareUpdating">固件更新中&#8230;</string>
   <string name="VIDEO_REFRESHING">正在載入，請稍後</string>
   <string name="VIDEO_SD_DESC">Micro SD卡需要初始化，才能存儲影像資料</string>
   <string name="WARN_TIME">警示時間</string>
